# plugincpp

./: CMakeLists.txt  LICENSE  README.md
client/: app_client.cpp
common/: error_code.h  function_traits.h  msg_codec.h  msgpack_codec.h  plugin.hpp  router.hpp
plugin/: custom_plugin.cc  dummy_plugin.cc
plugin_app/: main.cpp  test.cpp
